# dcmqi-python-distributions

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  binaries.txt  dcmqiUrls.cmake  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  update-dcmqi.yml
docs/: conf.py  index.md
src/dcmqi/: __init__.py
src/dcmqi_python_distributions /: __init__.py
tests/: __init__.py  test_compiled.py  test_executable.py  test_package.py
